--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Colour list</h1>
-  <ul>
-    <li>blue</li>
-    <li>green</li>
-    <li>red</li>
-    <li>yellow</li>
+  <h1>Title page</h1>
+  
   </ul>
 </body>
 </html>
